tests/lexer/19-error-comment.ref
"19-error-comment.cl", line 2:5, Lexical error: Unmatched *)
"19-error-comment.cl", line 6:5, Lexical error: EOF in comment
Compilation halted
