tests/lexer/19-error-comment.cl
class A {
    *)

    x : Int;

    (* some (* comment *)
};